--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,11 @@
   <head>
     {% load static %}
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Resoluciones">
+    <meta name="author" content="Tesis">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
     <title>{% block titulo %}Tesis{% endblock titulo %}</title>
 
