--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Resoluciones">
-    <meta name="author" content="Tesis">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Resoluciones" />
+    <meta name="author" content="Tesis" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="{% static 'img/favicon.ico' %}"
+    />
     <title>{% block titulo %}Tesis{% endblock titulo %}</title>
 
     {% block css %} {% endblock css %}
     <!--Aqui CSS-->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'css/Buscador.css' %}" rel="stylesheet" />
-    <link href="{% static 'scss/Animacion.scss '%}"  rel = "stylesheet" >
+    <link href="{% static 'scss/Animacion.scss '%}" rel="stylesheet" />
   </head>
   <body class="bg-white">
     {% block contenido %}
