--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
     {% endblock contenido %}
 
     <!--Aqui JS-->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/Buscador.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/Buscador.js' %}"></script>
     {% block Js %} {% endblock Js %}
   </body>
 </html>
